# JerryAchrich.github.io

./: .gitmodules  Cargo.toml  Dioxus.toml
assets/: main.css
docs/: 404.html  index.html  main.css
docs/assets/dioxus/: jerry-achrich.js  jerry-achrich_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: main.rs
test/: Cargo.toml
