[package]
name = "jerry-achrich"
version = "0.1.0"
edition = "2021"

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
async-recursion = "1.1.1"
